Update doc (project rename)

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,21 +12,21 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 
-library(Riboscore)
+library(rRMSAnalyzer)
 ```
 
 # Installation
 
-You can install the latest Riboscore version on CRAN with :
+You can install the latest rRMSAnalyzer version on CRAN with :
 
 ```{r, eval=FALSE}
-install.packages("riboscore")
+install.packages("rRMSAnalyzer")
 ```
 
 # Usage
 
 ```{r, eval = FALSE}
-library(Riboscore)
+library(rRMSAnalyzer)
 
 ribo <- load_ribodata("/path/to/your/csvfiles/directory/",
               "path/to/metadata.csv",
@@ -44,7 +44,7 @@ plot_PCA(ribo,"biological_condition")
 ```
 
 ```{r,echo=FALSE}
-path <- system.file("extdata", package="Riboscore")
+path <- system.file("extdata", package="rRMSAnalyzer")
 ribo <- load_ribodata(paste0(path,"/miniglioma"),
                       paste0(path,"/metadata.csv"),
                       metadata_key = "filename",
@@ -103,7 +103,7 @@ You can see a small example below :
 
 The folder structure can be whatever you wish, as long as either the directory and its sub-directories contain the necessary CSV files.
 
-**If you do not specify metadata, Riboscore will try to get any CSV files.**
+**If you do not specify metadata, rRMSAnalyzer will try to get any CSV files.**
 
 ## Metadata
 
@@ -207,7 +207,7 @@ The sample should not be grouped by library or batch. Unfortunately, this is cle
 
 ## Batch effect adjustment
 
-If the sequencing has been done in several batches, a batch effect can occur. One way to remove this effect is by using ComBat-Seq adjustment. The Riboscore package has a wrapper to use this adjustment on a RiboClass : *adjust_bias*.
+If the sequencing has been done in several batches, a batch effect can occur. One way to remove this effect is by using ComBat-Seq adjustment. The rRMSAnalyzer package has a wrapper to use this adjustment on a RiboClass : *adjust_bias*.
 
 ```{r}
 ribo_adjusted <- adjust_bias(ribo,"run")
